--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A web API operated for sbs.diamondstudios.dev",
   "main": "build/index.js",
   "scripts": {
-    "test": "npm i && tsc && cd build && node run index.js"
+    "test": "npm i && tsc && cd build && node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,16 @@
   "bugs": {
     "url": "https://github.com/diamonddev01/sbs_api/issues"
   },
-  "homepage": "https://github.com/diamonddev01/sbs_api#readme"
+  "homepage": "https://github.com/diamonddev01/sbs_api#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "path": "^0.12.7",
+    "querystring": "^0.2.1",
+    "quick.db": "^9.0.8"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
+    "typescript": "^4.9.4"
+  }
 }
