--- a/package.json
+++ b/package.json
@@ -20,14 +20,19 @@
   },
   "homepage": "https://github.com/diamonddev01/sbs_api#readme",
   "dependencies": {
+    "better-sqlite3": "^8.0.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "path": "^0.12.7",
     "querystring": "^0.2.1",
-    "quick.db": "^9.0.8"
+    "quick.db": "^9.0.8",
+    "request": "^2.88.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "@types/request": "^2.48.8",
     "typescript": "^4.9.4"
   }
 }
